fixed log line wrap

--- a/www/pgm2/flexstyle.css
+++ b/www/pgm2/flexstyle.css
@@ -716,7 +716,7 @@ body.commandref #menuScrollArea { left: 0px!important; }
 #content > pre > p, #content div#console > p{
 	display: inline;
 	word-break: break-word;
-	white-space: pre;
+	white-space: pre-wrap;
 	padding: 0;
 	margin: 0;
     text-indent: -50px;
